force-app/main/default/objects/Won_Reason__c/Won_Reason__c.object-meta.xml
<CustomObject>
    <description>Junction object for Campaign and Opportunity Won Reason. The object relationship is Campaign-Opportunity - but the name is &quot;Won Reason.&quot; Used to associate Campaigns and Opportunities -- and which Campaigns resulted in Won Opportunities.</description>
    <label>Won Reason</label>
    <nameField>
        <displayFormat>WR-{0000}</displayFormat>
        <label>Won Reason ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Won Reasons</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>