force-app/main/default/objects/Won_Reason__c/fields/DoNotUse__c.field-meta.xml
<CustomField>
    <fullName>DoNotUse__c</fullName>
    <label>DoNotUse</label>
    <length>1</length>
    <type>Text</type>
</CustomField>